# QtProject-trust

./: 2_player_mode.pro  43-源代码.txt  CMakeLists.txt  README.md  cheat_button.cpp  cheat_button.h  cheat_label.cpp  cheat_label.h  judge.cpp  judge.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  match_result.cpp  match_result.h  page_2players.cpp  page_2players.h  page_2players.ui  page_allplayers.cpp  page_allplayers.h  page_allplayers.ui  page_onetournament.cpp  page_onetournament.h  page_onetournament.ui  page_rules.cpp  page_rules.h  page_rules.ui  page_welcome.cpp  page_welcome.h  page_welcome.ui  pg_allplayers.cpp  pg_allplayers.h  pg_allplayers.ui  pg_mistakes.cpp  pg_mistakes.h  pg_mistakes.ui  pg_rules.cpp  pg_rules.h  pg_rules.ui  (+27 more)
stacked_widget/: page_2players.h  page_2players.ui  page_allplayers.h  page_allplayers.ui  page_onetournament.ui  page_rules.cpp  page_rules.h  page_rules.ui  res.qrc  stacked_widget.pro  widget.cpp  widget.h
